# weekform-dev

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  OG-AGENTS.md  README.md  absoloop.toml  biome.json  index.html  package-lock.json  package.json  start.sh  tsconfig.json
.absoloop/: ledger.jsonl  report.md  runtime.json  state.json  stress-test-web.sh  stress-test-web.ts
.absoloop/checkpoints/: 0000-initial.json  0001-post-iteration.json  0001-pre-agent.json  0002-post-iteration.json  0002-pre-agent.json  0003-builder-done.json  0003-post-iteration.json  0003-pre-agent.json  0004-builder-done.json  0004-human-approve.json  0004-post-iteration.json  0004-pre-agent.json  0004-terminal.json  0005-post-iteration.json  0005-pre-agent.json  0006-post-iteration.json  0006-pre-agent.json  0007-post-iteration.json  0007-pre-agent.json  0008-post-iteration.json  0008-pre-agent.json  0009-post-iteration.json  0009-pre-agent.json  0010-post-iteration.json  0010-pre-agent.json  0010-terminal.json  0011-post-iteration.json  0011-pre-agent.json  0012-post-iteration.json  0012-pre-agent.json  0013-post-iteration.json  0013-pre-agent.json  0014-post-iteration.json  0014-pre-agent.json  0015-human-abort.json  0015-post-iteration.json  0015-pre-agent.json  0016-post-iteration.json  0016-pre-agent.json  0017-post-iteration.json  (+68 more)
.absoloop/evidence/: audit-after-fix.json  audit-raw.txt  gate-root-build-a3.txt  gate-root-build-a4.txt  gate-root-build.txt  gate-test-cloud.txt  gate-verify-wave3.txt
.absoloop/reports/: OBJECTIVES.json  OBJECTIVES.md
.absoloop/zcomb/: kanban-session.json  ui-settings.json
.claude/: confidenz-latest.json
.codex/: hooks.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: calendar_eventkit.m  calendar_sources.rs  chat_sources.rs  lib.rs  macos_app_activation.m  main.rs
apps/web/: .env.example  (+6 more)
docs/: AUDIT_REMEDIATION_2026-07-20.md  BUILD_WEEK_2026.md  EXPANSION_ROADMAP.md  GOOGLE_CHAT_WEBEX_SETUP.md  PRIVACY.md  PRODUCTION_READINESS_AUDIT_2026-07-20.md  SLACK_APP_SETUP.md  WEEKFORM_CODEX_PARALLEL_PROMPT_RUNBOOK.md  WEEKFORM_CODEX_PARALLEL_PROMPT_RUNBOOK_PT2.md  WEEKFORM_HACKATHON_EXECUTION_BOARD.md  WEEKFORM_PAIRING_SPEC.md  WEEKFORM_SPAN_SIMULATOR.md  WEEKFORM_SPAN_SIMULATOR_PROMPT.md  WEEKFORM_SUPABASE_SCHEMA_DRAFT.sql  WEEKFORM_TEAM_CLAWFATHER_HACKATHON_BLUEPRINT.md  slack-app-manifest.yaml
extend/: .gitignore
scripts/: absoloop-init  absoloop-run  assert-linked-migrations.mjs  assert-linked-migrations.test.mjs  install.command  refresh-model-prices.mjs  release-mac.command  validate-vercel-deployment.mjs  validate-vercel-deployment.test.mjs
supabase/: seed.sql
(+690 files in other folders)
