[package]
name = "weekform"
version = "0.1.0"
description = "Explainable analyst capacity for macOS"
authors = ["Weekform"]
edition = "2021"

[lib]
name = "weekform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
base64 = "0.22"
aes-gcm = "0.10"
dotenvy = "0.15"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
security-framework = "3.7"
time = { version = "0.3.54", features = ["formatting", "parsing"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-store = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
